--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -541,9 +541,9 @@
             <div class="modal-list">
                 <h3>RBI Grade B Officer Exams</h3>
                  <ul>
-                <li><a href="rbi-grade-b-general.html">RBI Grade B — General (DR)</a></li>
-               <li><a href="rbi-grade-b-depr.html">RBI Grade B — DEPR (Economics & Policy Research)</a></li>
-               <li><a href="rbi-grade-b-dsim.html">RBI Grade B — DSIM (Statistics & Information Management)</a></li>
+                <li><a href="rbi-grade-b-dr-general-rbi-grade-b-dr-depr-department-of-economic-and-policy-research-rbi-grade-b-dr-dsim-department-of-statistics-and-information-management.html">RBI Grade B — General (DR)</a></li>
+               <li><a href="rbi-grade-b-dr-general-rbi-grade-b-dr-depr-department-of-economic-and-policy-research-rbi-grade-b-dr-dsim-department-of-statistics-and-information-management.html">RBI Grade B — DEPR (Economics & Policy Research)</a></li>
+               <li><a href="rbi-grade-b-dr-general-rbi-grade-b-dr-depr-department-of-economic-and-policy-research-rbi-grade-b-dr-dsim-department-of-statistics-and-information-management.html">RBI Grade B — DSIM (Statistics & Information Management)</a></li>
                </ul>
 
               <h3>RBI Grade A Officer Exams</h3>
@@ -554,7 +554,7 @@
 
                 <h3>RBI Assistant Exam</h3>
                   <ul>
-                 <li><a href="rbi-assistant.html">RBI Assistant (Clerk)</a></li>
+                 <li><a href="rbi-assistant-clerical-level.html">RBI Assistant (Clerk)</a></li>
                     </ul>
 
               <h3>RBI Specialist / Technical Posts</h3>
