--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -559,18 +559,18 @@
 
               <h3>RBI Specialist / Technical Posts</h3>
             <ul>
-  <li><a href="rbi-legal-officer.html">RBI Specialist — Legal Officer (Grade B)</a></li>
-  <li><a href="rbi-manager-technical.html">RBI Specialist — Manager (Technical: Civil/Electrical)</a></li>
-  <li><a href="rbi-assistant-librarian.html">RBI Specialist — Assistant Librarian (Grade A)</a></li>
-  <li><a href="rbi-curator.html">RBI Specialist — Curator (Grade A)</a></li>
-  <li><a href="rbi-it-specialist.html">RBI Specialist — IT / Data / Cyber Security</a></li>
+  <li><a href="rbi-specialist-technical-posts-exam-guide.html">RBI Specialist — Legal Officer (Grade B)</a></li>
+  <li><a href="rbi-specialist-technical-posts-exam-guide.html">RBI Specialist — Manager (Technical: Civil/Electrical)</a></li>
+  <li><a href="rbi-specialist-technical-posts-exam-guide.html">RBI Specialist — Assistant Librarian (Grade A)</a></li>
+  <li><a href="rbi-specialist-technical-posts-exam-guide.html">RBI Specialist — Curator (Grade A)</a></li>
+  <li><a href="rbi-specialist-technical-posts-exam-guide.html">RBI Specialist — IT / Data / Cyber Security</a></li>
 </ul>
 
 <h3>RBI Contractual / Consultant Posts</h3>
 <ul>
-  <li><a href="rbi-consultant-it.html">RBI Consultant — IT</a></li>
-  <li><a href="rbi-consultant-fintech.html">RBI Consultant — FinTech</a></li>
-  <li><a href="rbi-consultant-risk.html">RBI Consultant — Risk Management</a></li>
+  <li><a href="rbi-consultant--fintech-it-risk.html">RBI Consultant — IT</a></li>
+  <li><a href="rbi-consultant--fintech-it-risk.html">RBI Consultant — FinTech</a></li>
+  <li><a href="rbi-consultant--fintech-it-risk.html">RBI Consultant — Risk Management</a></li>
 </ul>
 
             </div>
