--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -583,9 +583,62 @@
             <button class="modal-close-button" title="Close">&times;</button>
             <h3 class="text-3xl font-bold text-[#805ad5] mb-4">राज्य स्तर की परीक्षाएँ</h3>
             <div class="modal-list">
-                <a href="state-civil-services.html">State Civil Services Exam (UPPSC, BPSC, etc.)</a>
-                <a href="state-engg-medical.html">State Engineering/Medical Exams</a>
-                <a href="state-group-c-d.html">Group C & D State Jobs</a>
+                <h3>State Public Service Commissions (PSCs)</h3>
+<ul>
+  <li><a href="uppsc.html">UPPSC — Uttar Pradesh Public Service Commission</a></li>
+  <li><a href="bpsc.html">BPSC — Bihar Public Service Commission</a></li>
+  <li><a href="rpsc.html">RPSC — Rajasthan Public Service Commission</a></li>
+  <li><a href="mppsc.html">MPPSC — Madhya Pradesh Public Service Commission</a></li>
+  <li><a href="ukpsc.html">UKPSC — Uttarakhand Public Service Commission</a></li>
+  <li><a href="jpsc.html">JPSC — Jharkhand Public Service Commission</a></li>
+  <li><a href="wbpsc.html">WBPSC — West Bengal Public Service Commission</a></li>
+  <li><a href="gpsc-gujarat.html">GPSC — Gujarat Public Service Commission</a></li>
+  <li><a href="gpsc-goa.html">GPSC — Goa Public Service Commission</a></li>
+  <li><a href="mpsc.html">MPSC — Maharashtra Public Service Commission</a></li>
+  <li><a href="hpsc.html">HPSC — Haryana Public Service Commission</a></li>
+  <li><a href="hppsc.html">HPPSC — Himachal Pradesh Public Service Commission</a></li>
+  <li><a href="jkpsc.html">JKPSC — Jammu & Kashmir Public Service Commission</a></li>
+  <li><a href="opsc.html">OPSC — Odisha Public Service Commission</a></li>
+  <li><a href="cgpsc.html">CGPSC — Chhattisgarh Public Service Commission</a></li>
+  <li><a href="tnpsc.html">TNPSC — Tamil Nadu Public Service Commission</a></li>
+  <li><a href="kpsc-karnataka.html">KPSC — Karnataka Public Service Commission</a></li>
+  <li><a href="kpsc-kerala.html">KPSC — Kerala Public Service Commission</a></li>
+  <li><a href="tpsc.html">TPSC — Tripura Public Service Commission</a></li>
+  <li><a href="appsc.html">APPSC — Andhra Pradesh Public Service Commission</a></li>
+  <li><a href="tspsc.html">TSPSC — Telangana State Public Service Commission</a></li>
+  <li><a href="manipur-psc.html">Manipur Public Service Commission</a></li>
+  <li><a href="meghalaya-psc.html">Meghalaya Public Service Commission</a></li>
+  <li><a href="mizoram-psc.html">Mizoram Public Service Commission</a></li>
+  <li><a href="nagaland-psc.html">Nagaland Public Service Commission</a></li>
+  <li><a href="sikkim-psc.html">Sikkim Public Service Commission</a></li>
+  <li><a href="arunachal-psc.html">Arunachal Pradesh Public Service Commission</a></li>
+  <li><a href="punjab-psc.html">Punjab Public Service Commission</a></li>
+</ul>
+
+<h3>State Subordinate Service Commissions / Selection Boards (SSCs/SSBs)</h3>
+<ul>
+  <li><a href="upsssc.html">UPSSSC — Uttar Pradesh Subordinate Services Selection Commission</a></li>
+  <li><a href="bssc.html">BSSC — Bihar Staff Selection Commission</a></li>
+  <li><a href="rsmssb.html">RSMSSB — Rajasthan Subordinate & Ministerial Services Selection Board</a></li>
+  <li><a href="mppeb.html">MPPEB (Vyapam) — Madhya Pradesh Professional Examination Board</a></li>
+  <li><a href="hssc.html">HSSC — Haryana Staff Selection Commission</a></li>
+  <li><a href="uksssc.html">UKSSSC — Uttarakhand Subordinate Services Selection Commission</a></li>
+  <li><a href="jssc.html">JSSC — Jharkhand Staff Selection Commission</a></li>
+  <li><a href="hpsssb.html">HPSSSB — Himachal Pradesh Subordinate Services Selection Board</a></li>
+  <li><a href="wbssc.html">WBSSC — West Bengal Staff Selection Commission</a></li>
+  <li><a href="osssc.html">OSSSC — Odisha Subordinate Staff Selection Commission</a></li>
+  <li><a href="cgvyapam.html">CG Vyapam — Chhattisgarh Professional Examination Board</a></li>
+  <li><a href="kea.html">KEA — Karnataka Examinations Authority</a></li>
+</ul>
+
+<h3>Other State Level Exams</h3>
+<ul>
+  <li><a href="state-police.html">State Police Recruitment Boards (SI, Constable)</a></li>
+  <li><a href="state-judiciary.html">State Judicial Services (Lower Judiciary)</a></li>
+  <li><a href="state-teacher.html">State Teacher Recruitment (TET/REET/CTET State Level)</a></li>
+  <li><a href="state-engineering.html">State Engineering Services (AE/JE)</a></li>
+  <li><a href="state-health.html">State Health Recruitment (Medical Officer, Staff Nurse)</a></li>
+</ul>
             </div>
         </div>
     </div>
