--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -592,8 +592,8 @@
   <li><a href="ukpsc.html">UKPSC — Uttarakhand Public Service Commission</a></li>
   <li><a href="jpsc.html">JPSC — Jharkhand Public Service Commission</a></li>
   <li><a href="wbpsc.html">WBPSC — West Bengal Public Service Commission</a></li>
-  <li><a href="gpsc-gujarat.html">GPSC — Gujarat Public Service Commission</a></li>
-  <li><a href="gpsc-goa.html">GPSC — Goa Public Service Commission</a></li>
+  <li><a href="gpsc.html">GPSC — Gujarat Public Service Commission</a></li>
+  <li><a href="gopsc.html">GPSC — Goa Public Service Commission</a></li>
   <li><a href="mpsc.html">MPSC — Maharashtra Public Service Commission</a></li>
   <li><a href="hpsc.html">HPSC — Haryana Public Service Commission</a></li>
   <li><a href="hppsc.html">HPPSC — Himachal Pradesh Public Service Commission</a></li>
