--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -601,8 +601,8 @@
   <li><a href="opsc.html">OPSC — Odisha Public Service Commission</a></li>
   <li><a href="cgpsc.html">CGPSC — Chhattisgarh Public Service Commission</a></li>
   <li><a href="tnpsc.html">TNPSC — Tamil Nadu Public Service Commission</a></li>
-  <li><a href="kpsc-karnataka.html">KPSC — Karnataka Public Service Commission</a></li>
-  <li><a href="kpsc-kerala.html">KPSC — Kerala Public Service Commission</a></li>
+  <li><a href="kpsc.html">KPSC — Karnataka Public Service Commission</a></li>
+  <li><a href="kpsckrla.html">KPSC — Kerala Public Service Commission</a></li>
   <li><a href="tpsc.html">TPSC — Tripura Public Service Commission</a></li>
   <li><a href="appsc.html">APPSC — Andhra Pradesh Public Service Commission</a></li>
   <li><a href="tspsc.html">TSPSC — Telangana State Public Service Commission</a></li>
