--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         // Step 2: Pay button click par Razorpay open karna
         payButton.addEventListener('click', () => {
             // Razorpay test key. Live hone par ise apne live key se replace karen.
-            const razorpayKey = 'rzp_test_R8jhec7OX4EwPc'; // Updated Razorpay Key
+            const razorpayKey = 'rzp_live_zyUA84YdEZR7rO'; // Updated Razorpay Key
 
             const options = {
                 key: razorpayKey,
