--- a/terms-&-conditions.html
+++ b/terms-&-conditions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Terms & Conditions - LuckyWin</title>
+  <title>Privacy Policy & Disclaimer - Govt Exam Guide</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,16 +20,24 @@
     color: #333;
     padding: 40px 20px;
     line-height: 1.6;
-    max-width: 800px;
+    max-width: 900px;
     margin: auto;
   }
 
   /* === Headings === */
-  h1 {
+  h1, h2 {
     font-size: 2rem;
     margin-bottom: 20px;
     color: #2a0066;
     text-align: center;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    text-align: left;
+    color: #333;
   }
 
   /* === Paragraph & Lists === */
@@ -48,7 +56,7 @@
     margin-bottom: 10px;
   }
 
-  /* === Links (optional for contact page) === */
+  /* === Links === */
   a {
     color: #0066cc;
     text-decoration: none;
@@ -71,13 +79,44 @@
   }
 </style>
 
-  <h1>Terms and Conditions</h1>
-  <p>By participating in LuckyWin contests, you agree to the following terms:</p>
+  <h1>Privacy Policy & Disclaimer</h1>
+
+  <p><strong>Govt Exam Guide</strong> is an independent educational app created for informational purposes only. 
+  We provide guidance on how different government exams are conducted and by which authority. 
+  We do not conduct any exams, nor are we affiliated with any government body.</p>
+
+  <h2>Data Sources</h2>
+  <p>All information in this app is collected from the official websites of respective government exam authorities. 
+  Users are strongly advised to always visit the official websites for application, notifications, and updates.</p>
+
   <ul>
-    <li>This is a digital skill-based contest platform.</li>
-    <li>Participants must provide accurate and valid information.</li>
-    <li>Once participation is confirmed, no cancellation or refund will be provided.</li>
-    <li>Winners will be selected based on pre-declared rules of the event.</li>
-    <li>We reserve the right to modify or cancel contests at any time without prior notice.</li>
+    <li><strong>UPSC</strong> – <a href="https://upsc.gov.in" target="_blank">https://upsc.gov.in</a></li>
+    <li><strong>SSC</strong> – <a href="https://ssc.nic.in" target="_blank">https://ssc.nic.in</a></li>
+    <li><strong>IBPS</strong> – <a href="https://ibps.in" target="_blank">https://ibps.in</a></li>
+    <li><strong>RBI</strong> – <a href="https://rbi.org.in" target="_blank">https://rbi.org.in</a></li>
+    <li><strong>UPPSC</strong> – <a href="https://uppsc.up.nic.in" target="_blank">https://uppsc.up.nic.in</a></li>
+    <li><strong>BPSC</strong> – <a href="https://bpsc.bih.nic.in" target="_blank">https://bpsc.bih.nic.in</a></li>
+    <li><strong>RPSC</strong> – <a href="https://rpsc.rajasthan.gov.in" target="_blank">https://rpsc.rajasthan.gov.in</a></li>
+    <li><strong>MPPSC</strong> – <a href="https://mppsc.mp.gov.in" target="_blank">https://mppsc.mp.gov.in</a></li>
+    <li>Other State PSCs – Available on respective official websites.</li>
   </ul>
+
+  <h2>Charges</h2>
+  <p>We charge a nominal fee of <strong>₹77</strong> from users. This fee is only for providing 
+  consolidated exam guidance, information, and app services. It is <strong>not related to any government exam fee or application fee</strong>.</p>
+
+  <h2>User Responsibility</h2>
+  <ul>
+    <li>Always check official websites for application forms, admit cards, and notifications.</li>
+    <li>Govt Exam Guide is only an educational guide, not an exam conducting authority.</li>
+  </ul>
+
+  <h2>Contact Us</h2>
+  <p>If you have any questions regarding this policy, you can contact us:</p>
+  <p>
+    📧 Email: support@crapd.in <br>
+    🌐 Website: <a href="https://crapd.in" target="_blank">https://crapd.in</a>
+  </p>
+
 </body>
+</html>
