--- a/terms-&-conditions.html
+++ b/terms-&-conditions.html
@@ -114,7 +114,7 @@
   <h2>Contact Us</h2>
   <p>If you have any questions regarding this policy, you can contact us:</p>
   <p>
-    📧 Email: support@crapd.in <br>
+    📧 Email: crapdindia@gmail.com <br>
     🌐 Website: <a href="https://crapd.in" target="_blank">https://crapd.in</a>
   </p>
 
