--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -651,7 +651,7 @@
   <li><a href="mizoram-psc.html">Mizoram Public Service Commission</a></li>
   <li><a href="nagaland-psc.html">Nagaland Public Service Commission</a></li>
   <li><a href="sikkim-psc.html">Sikkim Public Service Commission</a></li>
-  <li><a href="arunachal-psc.html">Arunachal Pradesh Public Service Commission</a></li>
+  <li><a href="arunachal-pradesh-psc.html">Arunachal Pradesh Public Service Commission</a></li>
   <li><a href="punjab-psc.html">Punjab Public Service Commission</a></li>
 </ul>
 
