--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -211,8 +211,8 @@
     <div class="container mx-auto p-4 md:p-8 lg:p-12">
 
         <header class="text-center mb-12 md:mb-16">
-            <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-golden-dark mb-4 drop-shadow-md">सरकारी परीक्षाओं की गाइड 🎯</h1>
-            <p class="text-lg sm:text-xl md:text-2xl text-brown-dark font-semibold">अपने करियर के लिए सही परीक्षा चुनें और तैयारी शुरू करें।</p>
+            <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-golden-dark mb-4 drop-shadow-md">🎯GovT-Exam-Guide🎯</h1>
+            <p class="text-lg sm:text-xl md:text-2xl text-brown-dark font-semibold">You Will Know Everything About All Govt Exam</p>
         </header>
 
         <div class="search-container mx-auto">
