--- a/uppsc.html
+++ b/uppsc.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPPSC PCS परीक्षा (सम्मिलित राज्य/प्रवर अधीनस्थ सेवा): संपूर्ण मार्गदर्शिका</title>
+     <script src="redirect_if_needed.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
