--- a/upsc-ese-ies-engineering-services-exam.html
+++ b/upsc-ese-ies-engineering-services-exam.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPSC इंजीनियरिंग सेवा परीक्षा (ESE/IES): संपूर्ण मार्गदर्शिका</title>
+     <script src="redirect_if_needed.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -846,22 +847,6 @@
             });
         });
     </script>
-    <script>
-  (function () {
-    // Check karo ki current page index.html hai ya nahi
-    var isIndex = location.pathname.endsWith("index.html") 
-                  || location.pathname === "/" 
-                  || location.pathname === "";
-
-    // Referrer check (agar apni hi site se aaya hai to allow karo)
-    var sameOriginReferrer = document.referrer && document.referrer.startsWith(location.origin);
-
-    // Agar index nahi hai aur direct/external open hua hai → index.html pe bhejo
-    if (!isIndex && !sameOriginReferrer) {
-      location.replace("index.html");
-    }
-  })();
-</script>
-
+    
 </body>
 </html>
