--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -665,9 +665,9 @@
             <h3 class="text-3xl font-bold mb-4">NTA परीक्षाएँ</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="neet-ug.html">NEET-UG — National Eligibility cum Entrance Test (Undergraduate)</a></li>
-  <li><a href="neet-pg.html">NEET-PG — National Eligibility cum Entrance Test (Postgraduate)</a></li>
-  <li><a href="neet-mds.html">NEET-MDS — National Eligibility cum Entrance Test (MDS)</a></li>
+  <li><a href="medical-neet-ug-pg-neet-mds.html">NEET-UG — National Eligibility cum Entrance Test (Undergraduate)</a></li>
+  <li><a href="medical-neet-ug-pg-neet-mds.html">NEET-PG — National Eligibility cum Entrance Test (Postgraduate)</a></li>
+  <li><a href="medical-neet-ug-pg-neet-mds.html">NEET-MDS — National Eligibility cum Entrance Test (MDS)</a></li>
 </ul>
 
 <h3>Engineering Entrance Exams</h3>
