--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -672,8 +672,8 @@
 
 <h3>Engineering Entrance Exams</h3>
 <ul>
-  <li><a href="jeemain.html">JEE Main — Joint Entrance Examination (Main)</a></li>
-  <li><a href="jeeadvanced.html">JEE Advanced (Conducted by IITs, but NTA handles JEE Main)</a></li>
+  <li><a href="engineering-entrance-exams-guide.html">JEE Main — Joint Entrance Examination (Main)</a></li>
+  <li><a href="engineering-entrance-exams-guide.html">JEE Advanced (Conducted by IITs, but NTA handles JEE Main)</a></li>
 </ul>
 
 <h3>University & College Entrance Exams</h3>
