--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -678,25 +678,25 @@
 
 <h3>University & College Entrance Exams</h3>
 <ul>
-  <li><a href="cuet-ug.html">CUET-UG — Common University Entrance Test (Undergraduate)</a></li>
-  <li><a href="cuet-pg.html">CUET-PG — Common University Entrance Test (Postgraduate)</a></li>
-  <li><a href="duet.html">DUET — Delhi University Entrance Test</a></li>
-  <li><a href="jnuee.html">JNUEE — Jawaharlal Nehru University Entrance Examination</a></li>
+  <li><a href="university-college-entrance-exams.html">CUET-UG — Common University Entrance Test (Undergraduate)</a></li>
+  <li><a href="university-college-entrance-exams.html">CUET-PG — Common University Entrance Test (Postgraduate)</a></li>
+  <li><a href="university-college-entrance-exams.html">DUET — Delhi University Entrance Test</a></li>
+  <li><a href="university-college-entrance-exams.html">JNUEE — Jawaharlal Nehru University Entrance Examination</a></li>
 </ul>
 
 <h3>Professional & Certification Exams</h3>
 <ul>
-  <li><a href="ugc-net.html">UGC-NET — University Grants Commission National Eligibility Test</a></li>
-  <li><a href="csir-net.html">CSIR-UGC NET — Council of Scientific & Industrial Research NET</a></li>
-  <li><a href="cmat.html">CMAT — Common Management Admission Test</a></li>
-  <li><a href="gpats.html">GPAT — Graduate Pharmacy Aptitude Test</a></li>
+  <li><a href="professional-certification-exams.html">UGC-NET — University Grants Commission National Eligibility Test</a></li>
+  <li><a href="professional-certification-exams.html">CSIR-UGC NET — Council of Scientific & Industrial Research NET</a></li>
+  <li><a href="professional-certification-exams.html">CMAT — Common Management Admission Test</a></li>
+  <li><a href="professional-certification-exams.html">GPAT — Graduate Pharmacy Aptitude Test</a></li>
 </ul>
 
 <h3>School & Scholarship Exams</h3>
 <ul>
-  <li><a href="aissee.html">AISSEE — All India Sainik School Entrance Exam</a></li>
-  <li><a href="ntse.html">NTSE — National Talent Search Examination</a></li>
-  <li><a href="scholarship-exams.html">Other NTA-based Scholarship/Eligibility Tests</a></li>
+  <li><a href="school-scholarship-exams.html">AISSEE — All India Sainik School Entrance Exam</a></li>
+  <li><a href="school-scholarship-exams.html">NTSE — National Talent Search Examination</a></li>
+  <li><a href="school-scholarship-exams.html">Other NTA-based Scholarship/Eligibility Tests</a></li>
 </ul>
             </div>
         </div>
