--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -708,8 +708,8 @@
             <h3 class="text-3xl font-bold mb-4">CBSE परीक्षाएँ</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="cbse-class-10.html">CBSE Class 10 Board Examination</a></li>
-  <li><a href="cbse-class-12.html">CBSE Class 12 Board Examination</a></li>
+  <li><a href="school-level-board-examinations.html">CBSE Class 10 Board Examination</a></li>
+  <li><a href="school-level-board-examinations.html">CBSE Class 12 Board Examination</a></li>
 </ul>
 
 <h3>Teacher Eligibility & Recruitment Exams</h3>
