--- a/index.html
+++ b/index.html
@@ -664,39 +664,39 @@
             <button class="modal-close-button" title="Close">&times;</button>
             <h3 class="text-3xl font-bold mb-4">NTA परीक्षाएँ</h3>
             <div class="modal-list">
-                <ul>
-  <li><a href="neet-ug.html">NEET-UG — National Eligibility cum Entrance Test (Undergraduate)</a></li>
-  <li><a href="neet-pg.html">NEET-PG — National Eligibility cum Entrance Test (Postgraduate)</a></li>
-  <li><a href="neet-mds.html">NEET-MDS — National Eligibility cum Entrance Test (MDS)</a></li>
+               <ul>
+  <li><a href="medical-neet-ug-pg-neet-mds.html">NEET-UG — National Eligibility cum Entrance Test (Undergraduate)</a></li>
+  <li><a href="medical-neet-ug-pg-neet-mds.html">NEET-PG — National Eligibility cum Entrance Test (Postgraduate)</a></li>
+  <li><a href="medical-neet-ug-pg-neet-mds.html">NEET-MDS — National Eligibility cum Entrance Test (MDS)</a></li> 
 </ul>
 
 <h3>Engineering Entrance Exams</h3>
 <ul>
-  <li><a href="jeemain.html">JEE Main — Joint Entrance Examination (Main)</a></li>
-  <li><a href="jeeadvanced.html">JEE Advanced (Conducted by IITs, but NTA handles JEE Main)</a></li>
+  <li><a href="engineering-entrance-exams-guide.html">JEE Main — Joint Entrance Examination (Main)</a></li>
+  <li><a href="engineering-entrance-exams-guide.html">JEE Advanced (Conducted by IITs, but NTA handles JEE Main)</a></li>
 </ul>
 
 <h3>University & College Entrance Exams</h3>
 <ul>
-  <li><a href="cuet-ug.html">CUET-UG — Common University Entrance Test (Undergraduate)</a></li>
-  <li><a href="cuet-pg.html">CUET-PG — Common University Entrance Test (Postgraduate)</a></li>
-  <li><a href="duet.html">DUET — Delhi University Entrance Test</a></li>
-  <li><a href="jnuee.html">JNUEE — Jawaharlal Nehru University Entrance Examination</a></li>
+  <li><a href="university-college-entrance-exams.html">CUET-UG — Common University Entrance Test (Undergraduate)</a></li>
+  <li><a href="university-college-entrance-exams.html">CUET-PG — Common University Entrance Test (Postgraduate)</a></li>
+  <li><a href="university-college-entrance-exams.html">DUET — Delhi University Entrance Test</a></li>
+  <li><a href="university-college-entrance-exams.html">JNUEE — Jawaharlal Nehru University Entrance Examination</a></li>
 </ul>
 
 <h3>Professional & Certification Exams</h3>
 <ul>
-  <li><a href="ugc-net.html">UGC-NET — University Grants Commission National Eligibility Test</a></li>
-  <li><a href="csir-net.html">CSIR-UGC NET — Council of Scientific & Industrial Research NET</a></li>
-  <li><a href="cmat.html">CMAT — Common Management Admission Test</a></li>
-  <li><a href="gpats.html">GPAT — Graduate Pharmacy Aptitude Test</a></li>
+  <li><a href="professional-certification-exams.html">UGC-NET — University Grants Commission National Eligibility Test</a></li>
+  <li><a href="professional-certification-exams.html">CSIR-UGC NET — Council of Scientific & Industrial Research NET</a></li>
+  <li><a href="professional-certification-exams.html">CMAT — Common Management Admission Test</a></li>
+  <li><a href="professional-certification-exams.html">GPAT — Graduate Pharmacy Aptitude Test</a></li>
 </ul>
 
 <h3>School & Scholarship Exams</h3>
 <ul>
-  <li><a href="aissee.html">AISSEE — All India Sainik School Entrance Exam</a></li>
-  <li><a href="ntse.html">NTSE — National Talent Search Examination</a></li>
-  <li><a href="scholarship-exams.html">Other NTA-based Scholarship/Eligibility Tests</a></li>
+  <li><a href="school-scholarship-exams.html">AISSEE — All India Sainik School Entrance Exam</a></li>
+  <li><a href="school-scholarship-exams.html">NTSE — National Talent Search Examination</a></li>
+  <li><a href="school-scholarship-exams.html">Other NTA-based Scholarship/Eligibility Tests</a></li>
 </ul>
             </div>
         </div>
@@ -708,8 +708,8 @@
             <h3 class="text-3xl font-bold mb-4">CBSE परीक्षाएँ</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="cbse-class-10.html">CBSE Class 10 Board Examination</a></li>
-  <li><a href="cbse-class-12.html">CBSE Class 12 Board Examination</a></li>
+  <li><a href="school-level-board-examinations.html">CBSE Class 10 Board Examination</a></li>
+  <li><a href="school-level-board-examinations.html">CBSE Class 12 Board Examination</a></li> 
 </ul>
 
 <h3>Teacher Eligibility & Recruitment Exams</h3>
