--- a/index.html
+++ b/index.html
@@ -719,11 +719,11 @@
 
 <h3>National Level Talent & Scholarship Exams (Earlier Conducted by CBSE, Now by NTA)</h3>
 <ul>
-  <li><a href="neet-ug.html">NEET-UG — National Eligibility cum Entrance Test (till 2018, now by NTA)</a></li>
-  <li><a href="jee-main.html">JEE Main — Joint Entrance Examination (Main, till 2018, now by NTA)</a></li>
-  <li><a href="ugc-net.html">UGC-NET — University Grants Commission NET (till 2018, now by NTA)</a></li>
-  <li><a href="cmat.html">CMAT — Common Management Admission Test (till 2018, now by NTA)</a></li>
-  <li><a href="gpat.html">GPAT — Graduate Pharmacy Aptitude Test (till 2018, now by NTA)</a></li>
+  <li><a href="medical-neet-ug-pg-neet-mds.html">NEET-UG — National Eligibility cum Entrance Test (till 2018, now by NTA)</a></li>
+  <li><a href="engineering-entrance-exams-guide.html">JEE Main — Joint Entrance Examination (Main, till 2018, now by NTA)</a></li>
+  <li><a href="professional-certification-exams.html">UGC-NET — University Grants Commission NET (till 2018, now by NTA)</a></li>
+  <li><a href="professional-certification-exams.html">CMAT — Common Management Admission Test (till 2018, now by NTA)</a></li>
+  <li><a href="professional-certification-exams.html">GPAT — Graduate Pharmacy Aptitude Test (till 2018, now by NTA)</a></li>
 </ul>
             </div>
         </div>
