--- a/index.html
+++ b/index.html
@@ -768,30 +768,30 @@
             <h3 class="text-3xl font-bold mb-4">KVS & NVS परीक्षाएँ</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="kvs-principal.html">KVS Principal Recruitment Exam</a></li>
-  <li><a href="kvs-vice-principal.html">KVS Vice Principal Recruitment Exam</a></li>
-  <li><a href="kvs-pgt.html">KVS PGT — Post Graduate Teacher Exam</a></li>
-  <li><a href="kvs-tgt.html">KVS TGT — Trained Graduate Teacher Exam</a></li>
-  <li><a href="kvs-prt.html">KVS PRT — Primary Teacher Exam</a></li>
-  <li><a href="kvs-librarian.html">KVS Librarian Exam</a></li>
-  <li><a href="kvs-staff.html">KVS Non-Teaching Staff Exams (Clerk, Assistant, etc.)</a></li>
+  <li><a href="kvs.html">KVS Principal Recruitment Exam</a></li>
+  <li><a href="kvs.html">KVS Vice Principal Recruitment Exam</a></li>
+  <li><a href="kvs.html">KVS PGT — Post Graduate Teacher Exam</a></li>
+  <li><a href="kvs.html">KVS TGT — Trained Graduate Teacher Exam</a></li>
+  <li><a href="kvs.html">KVS PRT — Primary Teacher Exam</a></li>
+  <li><a href="kvs.html">KVS Librarian Exam</a></li>
+  <li><a href="kvs.html">KVS Non-Teaching Staff Exams (Clerk, Assistant, etc.)</a></li>
 </ul>
 
 <h3>NVS Exams (Navodaya Vidyalaya Samiti)</h3>
 <ul>
-  <li><a href="nvs-principal.html">NVS Principal Recruitment Exam</a></li>
-  <li><a href="nvs-vice-principal.html">NVS Vice Principal Recruitment Exam</a></li>
-  <li><a href="nvs-pgt.html">NVS PGT — Post Graduate Teacher Exam</a></li>
-  <li><a href="nvs-tgt.html">NVS TGT — Trained Graduate Teacher Exam</a></li>
-  <li><a href="nvs-misc-teacher.html">NVS Miscellaneous Teacher Posts (Art, Music, PET, Librarian)</a></li>
-  <li><a href="nvs-non-teaching.html">NVS Non-Teaching Staff Exams (Clerk, Assistant, Staff Nurse, etc.)</a></li>
+  <li><a href="nvs.html">NVS Principal Recruitment Exam</a></li>
+  <li><a href="nvs.html">NVS Vice Principal Recruitment Exam</a></li>
+  <li><a href="nvs.html">NVS PGT — Post Graduate Teacher Exam</a></li>
+  <li><a href="nvs.html">NVS TGT — Trained Graduate Teacher Exam</a></li>
+  <li><a href="nvs.html">NVS Miscellaneous Teacher Posts (Art, Music, PET, Librarian)</a></li>
+  <li><a href="nvs.html">NVS Non-Teaching Staff Exams (Clerk, Assistant, Staff Nurse, etc.)</a></li>
 </ul>
 
 <h3>Jawahar Navodaya Vidyalaya Selection Test (JNVST)</h3>
 <ul>
-  <li><a href="jnvst-class-6.html">JNVST Class 6 Entrance Exam</a></li>
-  <li><a href="jnvst-class-9.html">JNVST Class 9 Lateral Entry Exam</a></li>
-  <li><a href="jnvst-class-11.html">JNVST Class 11 Lateral Entry Exam</a></li>
+  <li><a href="jnvst.html">JNVST Class 6 Entrance Exam</a></li>
+  <li><a href="jnvst.html">JNVST Class 9 Lateral Entry Exam</a></li>
+  <li><a href="jnvst.html">JNVST Class 11 Lateral Entry Exam</a></li>
 </ul>
             </div>
         </div>
