--- a/index.html
+++ b/index.html
@@ -779,12 +779,12 @@
 
 <h3>NVS Exams (Navodaya Vidyalaya Samiti)</h3>
 <ul>
-  <li><a href="nvs.html">NVS Principal Recruitment Exam</a></li>
-  <li><a href="nvs.html">NVS Vice Principal Recruitment Exam</a></li>
-  <li><a href="nvs.html">NVS PGT — Post Graduate Teacher Exam</a></li>
-  <li><a href="nvs.html">NVS TGT — Trained Graduate Teacher Exam</a></li>
-  <li><a href="nvs.html">NVS Miscellaneous Teacher Posts (Art, Music, PET, Librarian)</a></li>
-  <li><a href="nvs.html">NVS Non-Teaching Staff Exams (Clerk, Assistant, Staff Nurse, etc.)</a></li>
+  <li><a href="nvs-exa.html">NVS Principal Recruitment Exam</a></li>
+  <li><a href="nvs-exa.html">NVS Vice Principal Recruitment Exam</a></li>
+  <li><a href="nvs-exa.html">NVS PGT — Post Graduate Teacher Exam</a></li>
+  <li><a href="nvs-exa.html">NVS TGT — Trained Graduate Teacher Exam</a></li>
+  <li><a href="nvs-exa.html">NVS Miscellaneous Teacher Posts (Art, Music, PET, Librarian)</a></li>
+  <li><a href="nvs-exa.html">NVS Non-Teaching Staff Exams (Clerk, Assistant, Staff Nurse, etc.)</a></li>
 </ul>
 
 <h3>Jawahar Navodaya Vidyalaya Selection Test (JNVST)</h3>
