--- a/index.html
+++ b/index.html
@@ -2189,11 +2189,55 @@
                 // Example: await fetch('https://api.example.com/latest-recruitments.json');
                 // For this example, we use hardcoded data.
                 return [
-                    { title: "DRDO में वैज्ञानिक 'B' की भर्ती", text: "आवेदन करने की अंतिम तिथि: 25 सितंबर 2025", link: "https://rac.gov.in/", colorClass: "slide-5", deadline: "2025-09-25" },
-                    { title: "IBPS PO 2025 अधिसूचना जारी", text: "आवेदन करने की अंतिम तिथि: 30 सितंबर 2025", link: "https://www.ibps.in/", colorClass: "slide-4", deadline: "2025-09-30" },
-                    { title: "UPSC CSE 2026 के लिए आवेदन जल्द शुरू होंगे", text: "सिविल सेवा परीक्षा के लिए आवेदन करें", link: "https://upsconline.nic.in/", colorClass: "slide-2", deadline: "2026-01-14" },
-                    { title: "SSC CGL 2025 के लिए आवेदन करें", text: "आवेदन करने की अंतिम तिथि: 12 अक्टूबर 2025", link: "https://ssc.gov.in/portal/apply", colorClass: "slide-1", deadline: "2025-10-12" },
-                    { title: "रेलवे ग्रुप D में 10,000+ पद", text: "आवेदन करने की अंतिम तिथि: 15 नवंबर 2025", link: "https://www.rrbcdg.gov.in/", colorClass: "slide-3", deadline: "2025-11-15" }
+                    {
+    title: "Karnataka Grameena Bank (KGB) भर्ती 2025",
+    text: "Office Assistant और Scale I/II Officer पदों के लिए आवेदन अंतिम तिथि: 21 सितंबर 2025",
+    link: "https://timesofindia.indiatimes.com/city/hubballi/karnataka-grameena-bank-announces-recruitment-drive/articleshow/123749879.cms",
+    colorClass: "slide-1",
+    deadline: "2025-09-21"
+  },
+  {
+    title: "IBPS RRB PO & Clerk भर्ती 2025",
+    text: "प्रारंभ: 1 सितंबर 2025 | अंतिम तिथि: 21 सितंबर 2025",
+    link: "https://economictimes.indiatimes.com/jobs/exams-results/ibps-rrb-po-clerk-registration-2025-application-invited-for-13000-posts-check-key-dates-eligibility-selection-process/articleshow/123632340.cms",
+    colorClass: "slide-2",
+    deadline: "2025-09-21"
+  },
+  {
+    title: "MPESB Group 2 Sub‑Group 3 भर्ती 2025",
+    text: "Registration: 9 सित॰ 2025 से 23 सित॰ 2025 तक",
+    link: "https://timesofindia.indiatimes.com/education/news/mpesb-recruitment-2025-notification-out-for-339-graduate-posts-at-esb.mp.gov.in-registration-begins-on-this-date/articleshow/123671601.cms",
+    colorClass: "slide-3",
+    deadline: "2025-09-23"
+  },
+  {
+    title: "West Bengal SSC (WBSSC) Non‑Teaching भर्ती 2025",
+    text: "Applications: 16 सित॰ 2025 से 31 अक्टूबर 2025 तक",
+    link: "https://timesofindia.indiatimes.com/education/news/west-bengal-ssc-recruitment-2025-notification-for-8477-non-teaching-posts-released-at-westbengalssc-com-check-details-here/articleshow/123599509.cms",
+    colorClass: "slide-4",
+    deadline: "2025-10-31"
+  },
+  {
+    title: "Canara Bank Trainee (Sales & Marketing) भर्ती 2025",
+    text: "अंतिम तिथि: 6 अक्टूबर 2025",
+    link: "https://timesofindia.indiatimes.com/education/news/canara-bank-recruitment-2025-applications-open-for-trainee-posts-in-sales-and-marketing-check-details-here/articleshow/123744781.cms",
+    colorClass: "slide-5",
+    deadline: "2025-10-06"
+  },
+  {
+    title: "RPSC ASO (Assistant Statistical Officer) परीक्षा 2025",
+    text: "परीक्षा तिथि: 12 अक्टूबर 2025 (आवेदन तिथि पहले जारी हो चुकी है)",
+    link: "https://timesofindia.indiatimes.com/education/news/rpsc-aso-exam-schedule-released-check-dates-application-deadline-and-other-details-here/articleshow/123744711.cms",
+    colorClass: "slide-6",
+    deadline: "2025-10-12"
+  },
+  {
+    title: "Chandigarh JBT Teacher भर्ती 2025",
+    text: "Admit कार्ड उपलब्ध: 30 सित॰ 2025 | परीक्षा: 5 अक्टूबर 2025",
+    link: "https://timesofindia.indiatimes.com/education/news/chandigarh-jbt-teacher-recruitment-2025-exam-date-released-check-admit-card-details-here/articleshow/123745318.cms",
+    colorClass: "slide-7",
+    deadline: "2025-09-30"
+  }
                 ];
             }
 
